added login form

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -26,13 +26,9 @@ security:
 
         main:
             anonymous: ~
-            # activate different ways to authenticate
-
-            # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
-            http_basic: ~
-
-            # https://symfony.com/doc/current/security/form_login_setup.html
-            #form_login: ~
+            form_login:
+                login_path: login
+                check_path: login
 
     access_control:
             # require ROLE_ADMIN for /admin*
