implemented login stuff

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -29,7 +29,12 @@ security:
             form_login:
                 login_path: login
                 check_path: login
+            logout:
+                path:   /logout
+                target: /
 
     access_control:
             # require ROLE_ADMIN for /admin*
-            - { path: ^/plan, roles: ROLE_ADMIN }
+            - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+            - { path: ^/$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+            - { path: ^/, roles: ROLE_ADMIN }
