--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -38,4 +38,5 @@ security:
             - { path: ^/$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
             - { path: ^/plan/new-by-template$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
             - { path: ^/plan/[\d]*$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+            - { path: ^/plan/new$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
             - { path: ^/, roles: ROLE_ADMIN }
