--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -39,4 +39,5 @@ security:
             - { path: ^/plan/new-by-template$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
             - { path: ^/plan/[\d]*$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
             - { path: ^/plan/new$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+            - { path: ^/person/new, roles: IS_AUTHENTICATED_ANONYMOUSLY }
             - { path: ^/, roles: ROLE_ADMIN }
