--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -40,7 +40,6 @@ security:
             - { path: '^/plan/[0-9A-Za-z\-]{36}$', roles: IS_AUTHENTICATED_ANONYMOUSLY }
             - { path: ^/plan/new$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
             - { path: ^/person/new, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-            - { path: ^/_error/404, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-            - { path: ^/_error/403, roles: IS_AUTHENTICATED_ANONYMOUSLY }
             - { path: ^/_error, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+            - { path: ^/about, roles: IS_AUTHENTICATED_ANONYMOUSLY }
             - { path: ^/, roles: ROLE_ADMIN }
