--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -66,7 +66,9 @@ swiftmailer:
     host: '%mailer_host%'
     username: '%mailer_user%'
     password: '%mailer_password%'
-    spool: { type: memory }
+    encryption: ssl
+    port: 465
+    auth_mode: login
 
 assetic:
     debug:          '%kernel.debug%'
