drafted recover pass

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -42,4 +42,5 @@ security:
             - { path: ^/person/new, roles: IS_AUTHENTICATED_ANONYMOUSLY }
             - { path: ^/_error, roles: IS_AUTHENTICATED_ANONYMOUSLY }
             - { path: ^/about, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+            - { path: ^/lost-plan-pass, roles: IS_AUTHENTICATED_ANONYMOUSLY }
             - { path: ^/, roles: ROLE_ADMIN }
