--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
         "symfony/polyfill-apcu": "^1.0",
         "symfony/swiftmailer-bundle": "^2.3.10",
         "symfony/symfony": "3.3.*",
-        "twig/twig": "^1.0||^2.0"
+        "twig/twig": "^1.0||^2.0",
+        "willdurand/js-translation-bundle": "^2.6"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
