--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -3,3 +3,5 @@ app:
     type: annotation
 _bazinga_jstranslation:
     resource: "@BazingaJsTranslationBundle/Resources/config/routing/routing.yml"
+fos_user:
+    resource: "@FOSUserBundle/Resources/config/routing/all.xml"
