--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -37,4 +37,4 @@ security:
             - { path: ^/about, roles: IS_AUTHENTICATED_ANONYMOUSLY }
             - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
             - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
-            - { path: ^/, roles: ROLE_ADMIN }
+            - { path: ^/, roles: ROLE_USER }
