--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -24,6 +24,7 @@ security:
                 provider: fos_userbundle
                 csrf_token_generator: security.csrf.token_manager
                 default_target_path: plan_index
+                always_use_default_target_path: true
             logout:       true
             anonymous:    true
 
