allow unauth users to load translations

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -39,4 +39,5 @@ security:
             - { path: ^/about, roles: IS_AUTHENTICATED_ANONYMOUSLY }
             - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
             - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
+            - { path: ^/translations$, role: IS_AUTHENTICATED_ANONYMOUSLY }
             - { path: ^/, roles: ROLE_USER }
