--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -38,6 +38,8 @@ framework:
 twig:
     debug: '%kernel.debug%'
     strict_variables: '%kernel.debug%'
+    form_themes:
+        - 'form/form_errors.html.twig'
 
 # Doctrine Configuration
 doctrine:
