--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
         "willdurand/js-translation-bundle": "^2.6"
     },
     "require-dev": {
+        "liip/functional-test-bundle": "^1.8",
         "phpunit/phpunit": "^6.1",
         "sensio/generator-bundle": "^3.0",
         "symfony/phpunit-bridge": "^3.0"
