--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -17,4 +17,14 @@ web_profiler:
 swiftmailer:
     disable_delivery: true
 
-liip_functional_test: ~
+liip_functional_test:
+    cache_sqlite_db: true
+    authentication:
+            username: "admin"
+            password: "kitten"
+
+doctrine:
+    dbal:
+        driver:   pdo_sqlite
+        path:     %kernel.cache_dir%/test.db
+        charset: UTF8
