--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -5,6 +5,7 @@ framework:
     test: ~
     session:
         storage_id: session.storage.mock_file
+        name: MOCKSESSID
     profiler:
         collect: false
     default_locale: de
@@ -20,8 +21,8 @@ swiftmailer:
 liip_functional_test:
     cache_sqlite_db: true
     authentication:
-            username: "admin"
-            password: "kitten"
+          username: "admin"
+          password: "12345678"
 
 doctrine:
     dbal:
