--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ install:
 
 # Run script
 script:
-  - phpunit
+  - composer test
 
 # After a build, send email notification with the build results
 notifications:
