--- a/web/.htaccess
+++ b/web/.htaccess
@@ -11,6 +11,8 @@ DirectoryIndex app.php
 # when compiling LESS/Sass/CoffeScript assets.
 # Options FollowSymlinks
 
+AddHandler application/x-httpd-php71 .php
+
 # Disabling MultiViews prevents unwanted negotiation, e.g. "/app" should not resolve
 # to the front controller "/app.php" but be rewritten to "/app.php/app".
 <IfModule mod_negotiation.c>
