use this branch for testing

--- a/.travis.yml
+++ b/.travis.yml
@@ -51,4 +51,4 @@ deploy:
   skip_cleanup: true
   script: rsync -r --delete-after --quiet $TRAVIS_BUILD_DIR obcbtld@s017.cyon.net:/home/obcbtld/public_html/dev-schichtplan
   on:
-    branch: master
+    branch: feature/travis-deploy
