--- a/.travis.yml
+++ b/.travis.yml
@@ -41,23 +41,23 @@ deploy:
     skip_cleanup: true
     script: rsync -r --delete-after --links --exclude=.git/ --exclude=app/config/parameters.yml $TRAVIS_BUILD_DIR obcbtld@s017.cyon.net:/home/obcbtld/public_html/dev-schichtplan
     on:
-      branch: feature/travis-deploy
+      branch: develop
       php: 7.1
   - provider: script
     skip_cleanup: true
     script: ssh obcbtld@s017.cyon.net 'cd /home/obcbtld/public_html/dev-schichtplan/akut-shift-planner; ./post-deployment-dev.sh'
     on:
-      branch: feature/travis-deploy
+      branch: develop
       php: 7.1
-#  - provider: script
-#        skip_cleanup: true
-#        script: ssh obcbtld@s017.cyon.net '/home/obcbtld/public_html/schichtplan/post-deployment-prod.sh'
-#        on:
-#          branch: master
-#          php: 7.1
-#  - provider: script
-#      skip_cleanup: true
-#      script: scp -r $TRAVIS_BUILD_DIR obcbtld@s017.cyon.net '/home/obcbtld/public_html/dev-schichtplan/post-deployment-prod.sh'
-#      on:
-#        branch: development
-#        php: 7.1
+- provider: script
+    skip_cleanup: true
+    script: rsync -r --delete-after --links --exclude=.git/ --exclude=app/config/parameters.yml $TRAVIS_BUILD_DIR obcbtld@s017.cyon.net:/home/obcbtld/public_html/schichtplan
+    on:
+      branch: master
+      php: 7.1
+- provider: script
+    skip_cleanup: true
+    script: ssh obcbtld@s017.cyon.net 'cd /home/obcbtld/public_html/schichtplan/akut-shift-planner; ./post-deployment-prod.sh'
+    on:
+      branch: master
+      php: 7.1
