--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -97,6 +97,8 @@ fos_user:
     db_driver: orm
     firewall_name: main
     user_class: AppBundle\Entity\User
+    group:
+        group_class: AppBundle\Entity\Group
     from_email:
         address: "%mailer_user%"
         sender_name: "%mailer_user%"
