--- a/.travis.yml
+++ b/.travis.yml
@@ -53,11 +53,11 @@ deploy:
     skip_cleanup: true
     script: rsync -r --delete-after --links --exclude=.git/ --exclude=app/config/parameters.yml $TRAVIS_BUILD_DIR obcbtld@s017.cyon.net:/home/obcbtld/public_html/schichtplan
     on:
-      branch: master
+      tags: true
       php: 7.1
   - provider: script
     skip_cleanup: true
     script: ssh obcbtld@s017.cyon.net 'cd /home/obcbtld/public_html/schichtplan/akut-shift-planner; ./post-deployment-prod.sh'
     on:
-      branch: master
+      tags: true
       php: 7.1
