--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,10 @@ env:
 
 services:
   - mysql
+
 before-install:
   - composer self-update
+  - mysql -e 'CREATE DATABASE IF NOT EXISTS symfony;'
 
 install:
   - composer install
