--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -3,8 +3,8 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
 parameters:
     database_host: 127.0.0.1
-    database_port: ~
-    database_name: symfony
+    database_port: 3306
+    database_name: test
     database_user: root
     database_password: ~
     # You should uncomment this if you want to use pdo_sqlite
