--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,9 @@ matrix:
 env:
   - SYMFONY_VERSION="3.3.*"
 
+services:
+  -mysql
+
 before-install:
   - mysql -e 'CREATE DATABASE myapp_test;'
   - composer self-update
