reset to develop

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,11 +14,7 @@ matrix:
 env:
   - SYMFONY_VERSION="3.3.*"
 
-services:
-  -mysql
-
 before-install:
-  - mysql -e 'CREATE DATABASE myapp_test;'
   - composer self-update
 
 install:
@@ -27,6 +23,7 @@ install:
 
 script:
   - composer test
+  - rm app/config/parameters.yml
 
 notifications:
   email: jan.friedli@gmx.ch
@@ -39,7 +36,6 @@ before_deploy:
   - eval "$(ssh-agent -s)"
   - chmod 600 /tmp/deploy_rsa
   - ssh-add /tmp/deploy_rsa
-  
 deploy:
   - provider: script
     skip_cleanup: true
