--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ matrix:
     - php: 7.1
 
 env:
-  - SYMFONY_VERSION="3.3.*"
+  - SYMFONY_VERSION="3.3.*" DB=mysql
 
 services:
     - mysql
@@ -27,7 +27,6 @@ install:
 
 script:
   - composer test
-  - rm app/config/parameters.yml
 
 notifications:
   email: jan.friedli@gmx.ch
@@ -40,6 +39,7 @@ before_deploy:
   - eval "$(ssh-agent -s)"
   - chmod 600 /tmp/deploy_rsa
   - ssh-add /tmp/deploy_rsa
+
 deploy:
   - provider: script
     skip_cleanup: true
