--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ services:
     - mysql
 
 before-install:
-  - mysql -e 'CREATE DATABASE symfony;'
+  - php bin/console doctrine:database:create
   - composer self-update
 
 install:
