--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ services:
 
 before-install:
   - mysql -e 'create database akut-shift-planner_test'
-  - composer self-update
+  - echo yolo
 
 install:
   - cp app/config/parameters.yml.dist app/config/parameters.yml
