Feature/validate phone number (#61)
* use bundle for phone number type and verification

* fix all tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,21 +12,20 @@ matrix:
     - php: 7.1
 
 env:
-  - SYMFONY_VERSION="3.3.*"
+  - SYMFONY_VERSION="3.3.*" DB=mysql
 
 services:
     - mysql
 
-before-install:
-  - composer self-update
+before_install:
+  - mysql -e 'create database symfony'
 
 install:
-  - composer install
   - cp app/config/parameters.yml.dist app/config/parameters.yml
+  - composer install
 
 script:
   - composer test
-  - rm app/config/parameters.yml
 
 notifications:
   email: jan.friedli@gmx.ch
