--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -14,6 +14,7 @@ parameters:
     mailer_host: 127.0.0.1
     mailer_user: no-reply@schicht-plan.ch
     mailer_password: ~
+    admin_email: 'jan.friedli@gmx.ch'
 
     # A secret key that's used to generate certain security-related tokens
     secret: ThisTokenIsNotSoSecretChangeIt
