--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,9 @@
         "doctrine/orm": "^2.5",
         "friendsofsymfony/user-bundle": "~2.0",
         "incenteev/composer-parameter-handler": "^2.0",
+        "knplabs/knp-markdown-bundle": "^1.7",
         "knplabs/knp-paginator-bundle": "^2.6",
+        "mashape/unirest-php": "^3.0",
         "misd/phone-number-bundle": "^1.2",
         "ramsey/uuid": "^3.6",
         "sensio/distribution-bundle": "^5.0.19",
