--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -41,4 +41,5 @@ security:
             - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
             - { path: ^/translations$, role: IS_AUTHENTICATED_ANONYMOUSLY }
             - { path: ^/plancollection/.+$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+            - { path: ^/changelog, role: IS_AUTHENTICATED_ANONYMOUSLY }
             - { path: ^/, roles: ROLE_USER }
