--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ script:
   - composer test
 
 notifications:
-  email: jan.friedli@gmx.ch
+  email: jan.friedli@immerda.ch
 
 addons:
   ssh_known_hosts: s017.cyon.net
@@ -42,7 +42,7 @@ before_deploy:
 deploy:
   - provider: script
     skip_cleanup: true
-    script: rsync -rv --delete-after --links --exlcude='*.message' --exclude=.git/ --exclude=app/config/parameters.yml $TRAVIS_BUILD_DIR obcbtld@s017.cyon.net:/home/obcbtld/public_html/dev-schichtplan
+    script: rsync -rv --delete-after --links --exlcude="*.message" --exclude=.git/ --exclude=app/config/parameters.yml $TRAVIS_BUILD_DIR obcbtld@s017.cyon.net:/home/obcbtld/public_html/dev-schichtplan
     on:
       branch: develop
       php: 7.1
@@ -54,7 +54,7 @@ deploy:
       php: 7.1
   - provider: script
     skip_cleanup: true
-    script: rsync -rv --delete-after --links --exlcude='*.message' --exclude=.git/ --exclude=app/config/parameters.yml $TRAVIS_BUILD_DIR obcbtld@s017.cyon.net:/home/obcbtld/public_html/schichtplan
+    script: rsync -rv --delete-after --links --exlcude="*.message" --exclude=.git/ --exclude=app/config/parameters.yml $TRAVIS_BUILD_DIR obcbtld@s017.cyon.net:/home/obcbtld/public_html/schichtplan
     on:
       tags: true
       php: 7.1
