--- a/.travis.yml
+++ b/.travis.yml
@@ -42,6 +42,11 @@ before_deploy:
 deploy:
   - provider: script
     skip_cleanup: true
+    on:
+      branch: master
+      php: 7.3
+  - provider: script
+    skip_cleanup: true
     script: rsync -ra --delete-after --links --exclude='*.message' --exclude=.git/ --exclude=app/config/parameters.yml $TRAVIS_BUILD_DIR obcbtld@s017.cyon.net:/home/obcbtld/public_html/dev-schichtplan
     on:
       branch: master
