--- a/.travis.yml
+++ b/.travis.yml
@@ -42,6 +42,7 @@ before_deploy:
 deploy:
   - provider: script
     skip_cleanup: true
+    script: echo 'php 7.3'
     on:
       branch: master
       php: 7.3
