--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -5,6 +5,6 @@ _bazinga_jstranslation:
     resource: "@BazingaJsTranslationBundle/Resources/config/routing/routing.yml"
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
-fos_user_registration_register:
-    path: /profile
-    controller: AppBundle\Controller\ProfileController::showAction
+fos_user_profile_edit:
+    path: /profile/edit
+    controller: AppBundle\Controller\ProfileController::editAction
