--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "fribim/akut-schichtplan",
+    "name": "janfriedli/akut-schichtplan",
     "license": "proprietary",
     "type": "project",
     "autoload": {
