--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -14,7 +14,7 @@ parameters:
     mailer_host: 127.0.0.1
     mailer_user: no-reply@schicht-plan.ch
     mailer_password: ~
-    admin_email: 'jan.friedli@gmx.ch'
+    admin_email: 'jan.friedli@immerda.ch'
     repo_changelog: 'https://api.github.com/repos/janfriedli/akut-shift-planner/releases'
 
     # A secret key that's used to generate certain security-related tokens
