--- a/composer.json
+++ b/composer.json
@@ -25,32 +25,27 @@
         "doctrine/doctrine-fixtures-bundle": "^2.3",
         "doctrine/orm": "^2.5",
         "friendsofsymfony/user-bundle": "~2.0",
-        "incenteev/composer-parameter-handler": "^2.0",
         "knplabs/knp-markdown-bundle": "^1.7",
         "knplabs/knp-paginator-bundle": "^2.6",
         "mashape/unirest-php": "^3.0",
         "misd/phone-number-bundle": "^1.2",
         "ramsey/uuid": "^3.6",
-        "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^3.0.2",
         "snilius/twig-sort-by-field": "^0.1.5",
-        "symfony/assetic-bundle": "^2.8",
         "symfony/monolog-bundle": "^3.1.0",
         "symfony/polyfill-apcu": "^1.0",
-        "symfony/swiftmailer-bundle": "^2.3.10",
-        "symfony/symfony": "3.4.*",
+        "symfony/swiftmailer-bundle": "^3.1",
+        "symfony/symfony": "^4.0",
         "twig/twig": "^2.0",
         "willdurand/js-translation-bundle": "^2.6"
     },
     "require-dev": {
-        "liip/functional-test-bundle": "^1.8",
-        "phpunit/phpunit": "^6.1",
-        "sensio/generator-bundle": "^3.0",
-        "symfony/phpunit-bridge": "^3.0"
+        "liip/functional-test-bundle": "3.3.0",
+        "phpunit/phpunit": "^7.5.0",
+        "symfony/phpunit-bridge": "^4.0"
     },
     "scripts": {
         "symfony-scripts": [
-            "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
