--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,13 @@
 /web/bundles/
 .idea/*
 /app/spool/*
+###> phpunit/phpunit ###
+/phpunit.xml
+.phpunit.result.cache
+###< phpunit/phpunit ###
+
+###> symfony/phpunit-bridge ###
+.phpunit
+.phpunit.result.cache
+/phpunit.xml
+###< symfony/phpunit-bridge ###
