--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
         "ramsey/uuid": "^3.6",
         "sensio/framework-extra-bundle": "^3.0.2",
         "snilius/twig-sort-by-field": "^0.1.5",
+        "symfony/flex": "^1.12",
         "symfony/monolog-bundle": "^3.1.0",
         "symfony/polyfill-apcu": "^1.0",
         "symfony/swiftmailer-bundle": "^3.1",
@@ -75,6 +76,9 @@
         "incenteev-parameters": {
             "file": "app/config/parameters.yml"
         },
-        "branch-alias": null
+        "branch-alias": null,
+        "symfony": {
+            "allow-contrib": true
+        }
     }
 }
