--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,9 @@
         ]
     },
     "require": {
-        "php": "^7.0",
+        "php": ">=7.1.3",
+        "ext-ctype": "*",
+        "ext-iconv": "*",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/doctrine-fixtures-bundle": "^2.3",
         "doctrine/orm": "^2.5",
@@ -32,11 +34,18 @@
         "ramsey/uuid": "^3.6",
         "sensio/framework-extra-bundle": "^3.0.2",
         "snilius/twig-sort-by-field": "^0.1.5",
-        "symfony/flex": "^1.12",
+        "symfony/asset": "4.4.*",
+        "symfony/console": "*",
+        "symfony/dotenv": "*",
+        "symfony/flex": "^1.3.1",
+        "symfony/framework-bundle": "*",
         "symfony/monolog-bundle": "^3.1.0",
         "symfony/polyfill-apcu": "^1.0",
+        "symfony/security-csrf": "4.4.*",
         "symfony/swiftmailer-bundle": "^3.1",
-        "symfony/symfony": "^4.0",
+        "symfony/twig-bundle": "4.4.*",
+        "symfony/yaml": "*",
+        "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.0",
         "willdurand/js-translation-bundle": "^2.6"
     },
@@ -45,40 +54,51 @@
         "phpunit/phpunit": "^7.5.0",
         "symfony/phpunit-bridge": "^4.0"
     },
-    "scripts": {
-        "symfony-scripts": [
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::prepareDeploymentTarget"
-        ],
-        "post-install-cmd": [
-            "@symfony-scripts"
-        ],
-        "post-update-cmd": [
-            "@symfony-scripts"
-        ],
-        "test": [
-            "vendor/phpunit/phpunit/phpunit"
-        ]
-    },
     "config": {
+        "preferred-install": {
+            "*": "dist"
+        },
         "sort-packages": true
     },
-    "extra": {
-        "symfony-app-dir": "app",
-        "symfony-bin-dir": "bin",
-        "symfony-var-dir": "var",
-        "symfony-web-dir": "web",
-        "symfony-tests-dir": "tests",
-        "symfony-assets-install": "relative",
-        "incenteev-parameters": {
-            "file": "app/config/parameters.yml"
+    "autoload": {
+        "psr-4": {
+            "AppBundle\\": "src/AppBundle",
+            "App\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\AppBundle\\": "tests/AppBundle",
+            "App\\Tests\\": "tests/"
+        }
+    },
+    "replace": {
+        "paragonie/random_compat": "2.*",
+        "symfony/polyfill-ctype": "*",
+        "symfony/polyfill-iconv": "*",
+        "symfony/polyfill-php71": "*",
+        "symfony/polyfill-php70": "*",
+        "symfony/polyfill-php56": "*"
+    },
+    "scripts": {
+        "auto-scripts": {
+            "cache:clear": "symfony-cmd",
+            "assets:install %PUBLIC_DIR%": "symfony-cmd"
         },
-        "branch-alias": null,
+        "post-install-cmd": [
+            "@auto-scripts"
+        ],
+        "post-update-cmd": [
+            "@auto-scripts"
+        ]
+    },
+    "conflict": {
+        "symfony/symfony": "*"
+    },
+    "extra": {
         "symfony": {
-            "allow-contrib": true
+            "allow-contrib": false,
+            "require": "4.4.*"
         }
     }
 }
