--- a/composer.json
+++ b/composer.json
@@ -2,23 +2,6 @@
     "name": "janfriedli/akut-schichtplan",
     "license": "proprietary",
     "type": "project",
-    "autoload": {
-        "psr-4": {
-            "": "src/"
-        },
-        "classmap": [
-            "app/AppKernel.php",
-            "app/AppCache.php"
-        ]
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Tests\\": "tests/"
-        },
-        "files": [
-            "vendor/symfony/symfony/src/Symfony/Component/VarDumper/Resources/functions/dump.php"
-        ]
-    },
     "require": {
         "php": ">=7.1.3",
         "ext-ctype": "*",
@@ -34,6 +17,7 @@
         "ramsey/uuid": "^3.6",
         "sensio/framework-extra-bundle": "^3.0.2",
         "snilius/twig-sort-by-field": "^0.1.5",
+        "symfony/apache-pack": "^1.0",
         "symfony/asset": "4.4.*",
         "symfony/console": "*",
         "symfony/dotenv": "*",
@@ -41,9 +25,13 @@
         "symfony/framework-bundle": "*",
         "symfony/monolog-bundle": "^3.1.0",
         "symfony/polyfill-apcu": "^1.0",
+        "symfony/security-bundle": "4.4.*",
         "symfony/security-csrf": "4.4.*",
+        "symfony/stopwatch": "4.4.*",
         "symfony/swiftmailer-bundle": "^3.1",
         "symfony/twig-bundle": "4.4.*",
+        "symfony/web-profiler-bundle": "4.4.*",
+        "symfony/web-server-bundle": "4.4.*",
         "symfony/yaml": "*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.0",
@@ -97,7 +85,7 @@
     },
     "extra": {
         "symfony": {
-            "allow-contrib": false,
+            "allow-contrib": true,
             "require": "4.4.*"
         }
     }
