--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,10 @@
-#index:
-#    path: /
-#    controller: App\Controller\DefaultController::index
+app:
+    resource: '../src/AppBundle/Controller/'
+    type: annotation
+_bazinga_jstranslation:
+    resource: "@BazingaJsTranslationBundle/Resources/config/routing/routing.yml"
+fos_user:
+    resource: "@FOSUserBundle/Resources/config/routing/all.xml"
+fos_user_profile_edit:
+    path: /profile/edit
+    controller: AppBundle\Controller\ProfileController::editAction
