--- a/.env
+++ b/.env
@@ -35,3 +35,5 @@ APP_SECRET=aa5c70082c41e74a8a655b04b6d8036a
 #TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
 #TRUSTED_HOSTS='^(localhost|example\.com)$'
 ###< symfony/framework-bundle ###
+
+GITHUB_CHANGELOG_API_ENDPOINT='https://api.github.com/repos/janfriedli/akut-shift-planner/releases'
