--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,23 +1,50 @@
+# To get started with security, check out the documentation:
+# https://symfony.com/doc/current/security.html
 security:
-    # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
+    encoders:
+        FOS\UserBundle\Model\UserInterface: auto
+
     providers:
-        users_in_memory: { memory: null }
+        fos_userbundle:
+            id: fos_user.user_provider.username_email
+
+    role_hierarchy:
+        ROLE_ADMIN: ROLE_USER
+        ROLE_SUPER_ADMIN: ROLE_ADMIN
+
     firewalls:
+        # disables authentication for assets and the profiler, adapt it according to your needs
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+
         main:
-            anonymous: lazy
-            provider: users_in_memory
+            pattern: ^/
+            logout_on_user_change: true
+            user_checker: fos_user.user_checker
+            form_login:
+                provider: fos_userbundle
+                csrf_token_generator: security.csrf.token_manager
+                default_target_path: plan_index
+                always_use_default_target_path: true
+            logout: true
+            anonymous: true
 
-            # activate different ways to authenticate
-            # https://symfony.com/doc/current/security.html#firewalls-authentication
-
-            # https://symfony.com/doc/current/security/impersonating_user.html
-            # switch_user: true
-
-    # Easy way to control access for large sections of your site
-    # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/login$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/plan/new-by-template$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - {
+              path: '^/plan/[0-9A-Za-z\-]{36}$',
+              roles: IS_AUTHENTICATED_ANONYMOUSLY,
+          }
+        - { path: ^/plan/new$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/person/new, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/_error, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/about, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/translations$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/plancollection/.+$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/changelog, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/, roles: ROLE_USER }
