--- a/config/packages/test/framework.yaml
+++ b/config/packages/test/framework.yaml
@@ -2,3 +2,7 @@ framework:
     test: true
     session:
         storage_id: session.storage.mock_file
+liip_functional_test:
+    authentication:
+        username: "admin"
+        password: "12345678"
