--- a/.env.test
+++ b/.env.test
@@ -2,3 +2,4 @@
 KERNEL_CLASS='App\Kernel'
 APP_SECRET='$ecretf0rt3st'
 SYMFONY_DEPRECATIONS_HELPER=999999
+GITHUB_CHANGELOG_API_ENDPOINT='https://api.github.com/repos/janfriedli/akut-shift-planner/releases'
