fixed pla controller authenticated test

--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -3,3 +3,6 @@ twig:
     debug: '%kernel.debug%'
     strict_variables: '%kernel.debug%'
     exception_controller: null
+    form_themes:
+        - 'form/fields.html.twig'
+        - 'form/form_errors.html.twig'
