--- a/config/packages/test/framework.yaml
+++ b/config/packages/test/framework.yaml
@@ -2,7 +2,7 @@ framework:
     test: true
     session:
         storage_id: session.storage.mock_file
-        name: MOCKSESSION
+        name: MOCKSESSID
 liip_functional_test:
     authentication:
         username: "admin"
