updated travis conig

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,16 +11,9 @@ matrix:
     - php: 7.3
 
 env:
-  - SYMFONY_VERSION="3.4.*" DB=mysql
-
-services:
-    - mysql
-
-before_install:
-  - mysql -e 'create database symfony'
+  - SYMFONY_VERSION="4.4.*"
 
 install:
-  - cp app/config/parameters.yml.dist app/config/parameters.yml
   - composer install
 
 script:
