--- a/.travis.yml
+++ b/.travis.yml
@@ -9,12 +9,14 @@ cache:
 matrix:
   include:
     - php: 7.3
+    - php: 7.4
+
 
 env:
   - SYMFONY_VERSION="4.4.*"
 
 install:
-  - composer install
+  - composer install --ignore-platform-reqs
 
 script:
   - composer test
